some corrections in user cart js file

--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -16,7 +16,7 @@
                 <%var _id=item._id%>
                 <%var quantity=item.quantity%>
                 <% const product = item.product; %>
-                <div class="container" style="margin-top: 10px; margin-bottom: 10px;">
+                <div class="container productContainer" id="product<%=item._id%>" style="margin-top: 10px; margin-bottom: 10px;">
                     <div class="row productRow">
                         <div class="col-12 col-lg-5 p-2 d-flex align-items-center">
                             <div class="row">
