--- a/views/user/verifyOtpLogin.ejs
+++ b/views/user/verifyOtpLogin.ejs
@@ -12,7 +12,7 @@
         <label class="form-label">Email</label>
         <div class="input-group has-validation">
             <span class="input-group-text" id="inputGroupPrepend"><%= email ? email : ' ' %></span>
-            <input type="hidden" name="email" value="<%= email ? email : ' ' %>">
+            <input id="emailInput" type="hidden" name="email" value="<%= email ? email : ' ' %>">
         </div>
     </div>
     <div class="col-md-12">
@@ -21,7 +21,7 @@
           <h6 class="text ">Expires In : </h6>
           <div id="timer" class="display-8 text-danger mb-1" style="width: 30px;">0</div>
         </div>
-        <a href="/user/sendOtpAgain?email=<%= email ? email : ' ' %>" class="btn btn-dark mb-2 rounded-pill" id="startCountdownButton2">Resent Otp</a>
+        <a class="btn btn-dark mb-2 rounded-pill" id="startCountdownButton2">Resent Otp</a>
         <div class="input-group">
             <span class="input-group-text" id="inputGroupPrepend"><i class="bi bi-key"></i></span>
             <input type="password" class="form-control" name="otp" required>
@@ -34,102 +34,9 @@
         </div>
     </div>
 </form>
-
 </div>
-<div class="alertKey">
-    <% if(locals.message) { %>
-      <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-        data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-        <strong><%= message %></strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-      
-      <script>
-        // Add this script to your page
-        setTimeout(function() {
-          document.getElementById('success-alert').style.display = 'none';
-        }, 2000); // Adjust the delay (in milliseconds) as needed
-      </script>
-    <% } %>      
-  </div>
-  <div class="alertKey">
-    <% if(locals.messageS) { %>
-      <div class="alert alert-success alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-        data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-        <strong><%= messageS %></strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-  
-      <script>
-        // Add this script to your page
-        setTimeout(function() {
-          document.getElementById('success-alert').style.display = 'none';
-        }, 2000); // Adjust the delay (in milliseconds) as needed
-      </script>
-    <% } %>      
-  </div>
+<%- include('../layout/alert')-%>
 </div>
-
-
-<script>
-    const OtpButton=document.querySelector('#startCountdownButton2');
-    OtpButton.addEventListener('click', function () {
-        const alertMessage='Otp Sended!';
-        showAlert(alertMessage);
-    });
-    
-    document.getElementById('submit').addEventListener('click', function() {
-       document.getElementById('counterInput').value = localStorage.getItem('countdownTime2');
-     });
-    
-
-   (() => {
-            'use strict'
-            const forms = document.querySelectorAll('.needs-validation')
-            Array.from(forms).forEach(form => {
-                form.addEventListener('submit', event => {
-
-
-                const passwordInput = form.querySelector('[name="otp"]');
-                const passwordValue = passwordInput.value;
-
-
-                if (passwordValue.length < 6) {
-                    event.preventDefault();
-                    event.stopPropagation();
-                    const alertMessage='Enter a Valid Otp';
-                    showAlert(alertMessage);
-                    return;
-                }
-                if (/^\s*$/.test(passwordValue)) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                        const alertMessage='Otp cannot be just spaces.';
-                        showAlert(alertMessage);
-                        return;
-                    }
-               
-                if (!form.checkValidity()) {
-                    event.preventDefault()
-                    event.stopPropagation()
-                }
-
-                form.classList.add('was-validated')
-                }, false)
-            })
-            })()
-
-
-            form.addEventListener('keydown', event => {
-            if (event.key === 'Enter') {
-                form.dispatchEvent(new Event('submit'));
-            }
-        });
-
-</script>
-
-<script type="module" src="../../public/jsFiles/third.js"></script>
-<!-- <script type="module" src="../../public/jsFiles/first.js"></script> -->
-
-
+<script type="module" src="../../public/jsFiles/startCountdownForOtpLogIn.js"></script>
+<script type="module" src="../../public/jsFiles/verifyOtpLogIn.js"></script>
 <%- include('../layout/footerHTML')-%>
