--- a/public/css/adminHeader.css
+++ b/public/css/adminHeader.css
@@ -74,8 +74,7 @@ h5 {
     .coverdiv{
         height: 30px;
     }
-    .bottomCover{
-    }
+   
   }
 @media(max-width:403px){
     .bottomHeader{
@@ -89,8 +88,7 @@ h5 {
     .coverdiv{
         height: 20px;
     }
-    .bottomCover{
-    }
+    
   }
 
 .RAREADMIN{
@@ -169,9 +167,7 @@ h5 {
         margin-right: 0px;
         width: 100%;
     }
-    .RAREADMIN{
-        /* padding-right: 20px; */
-    }
+ 
     .Manga{
         margin-left: 50px;
     }
@@ -282,4 +278,52 @@ h5 {
  box-shadow: rgb(93 24 220) 0px 0px 0px 0px;
  transform: translateY(10px);
  transition: 100ms;
+}
+
+
+        .chatButton {
+        align-items: center;
+        background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+        border: 0;
+        border-radius: 8px;
+        box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+        box-sizing: border-box;
+        color: #FFFFFF;
+        display: flex;
+        font-family: Phantomsans, sans-serif;
+        font-size: 18px;
+        justify-content: center;
+        line-height: 1em;
+        max-width: 100%;
+        min-width: 140px;
+        padding: 3px;
+        text-decoration: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        white-space: nowrap;
+        cursor: pointer;
+        transition: all .3s;
+        }
+
+.chatButton:active,
+.chatButton:hover {
+ outline: 0;
+}
+
+.chatButton span {
+ background-color: rgb(5, 6, 45);
+ padding: 16px 24px;
+ border-radius: 6px;
+ width: 100%;
+ height: 100%;
+ transition: 300ms;
+}
+
+.chatButton:hover span {
+ background: none;
+}
+
+.chatButton:active {
+ transform: scale(0.9);
 }
