--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -34,8 +34,8 @@
     }
   }
   .firstImage:hover {
-    transform: scale(1.05) rotate(1deg);
-    filter: drop-shadow(0px 0px 15px #5353534d);
+    transform: scale(1.05);
+    filter: drop-shadow(0px 0px 15px rgba(151, 151, 151, 0.302));
   }
   
   .firstImage {
@@ -56,7 +56,7 @@
     background-color: rgba(255, 255, 255, 0.634);
     box-shadow: 0px 0px 17px rgba(0, 0, 0, 0.542);
     transform: translate(-50%, -50%);
-    border: 1px solid rgb(151, 149, 149);
+    border: 1px solid rgba(151, 149, 149, 0.621);
     border-radius: 20px;
     color: rgb(0, 0, 0); /* Adjust text color */
     text-align: center;
@@ -103,6 +103,7 @@
     max-width: 1190px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 10px;
