--- a/public/css/userRegister.css
+++ b/public/css/userRegister.css
@@ -6,10 +6,27 @@ font-family: 'Plus Jakarta Sans', sans-serif; */
 }
 
 body{
-background-image: url('../images/vecteezy_minimalist-dark-gradient-wave-background-simple-design-for_7718309.jpg');
-    background-size: cover; 
-    background-position: center;
-    background-repeat: no-repeat;
+width: 100%;
+  height: 100%;
+  --s: 250px; /* control the size */
+  --c1: rgb(0, 0, 0);
+  --c2: #ffffff;
+
+  --_g: #0000 25%, #0008 47%, var(--c1) 53% 147%, var(--c2) 153% 247%,
+    var(--c1) 253% 347%, var(--c2) 353% 447%, var(--c1) 453% 547%, #0008 553%,
+    #0000 575%;
+  --_s: calc(25% / 3) calc(25% / 4) at 50%;
+  background: radial-gradient(var(--_s) 100%, var(--_g)),
+    radial-gradient(var(--_s) 100%, var(--_g)) calc(var(--s) / 2)
+      calc(3 * var(--s) / 4),
+    radial-gradient(var(--_s) 0, var(--_g)) calc(var(--s) / 2) 0,
+    radial-gradient(var(--_s) 0, var(--_g)) 0 calc(3 * var(--s) / 4),
+    repeating-linear-gradient(
+      90deg,
+      #accec0 calc(25% / -6) calc(25% / 6),
+      #61a6ab 0 calc(25% / 2)
+    );
+  background-size: var(--s) calc(3 * var(--s) / 2);
 
 }
 
