--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -56,7 +56,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
                         <div class="footer-widget">
                             <div class="footer-widget-heading">
-                                <h3>Useful Links</h3>
+                                <h3>Links</h3>
                             </div>
                             <ul>
                                 <li><a href="/user/home">Home</a></li>
@@ -112,24 +112,4 @@
             </div>
         </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <%- include('./footerHTML')-%>
