--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -23,7 +23,6 @@
                 <span class="cartCount" id="cartCount"></span></div>
                 <span class="profileMan">
                 <a class="text-dark " data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><i class="profileIcon text-center bi bi-person-circle " style=" font-size: 50px; cursor: pointer;"></i></i</a></span>
-               
             </div>
         </div>
         <div class="bottomHeader container mb-3">
@@ -45,7 +44,6 @@
                   <li class="text-center hover ps-3 pe-3"><a class=" " href="/user/brand?brand=converse">CONVERSE</a></li>
                 </ul>
               </div>
-              
               <div class="offcanvas offcanvas-start bg-dark" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel" data-bs-scroll="true" style="overflow: visible;">
                 <div class="offcanvas-header">
                   <h5 class="offcanvas-title text-center text-light" id="staticBackdropLabel">Hello <span class="userName capitalizeFirst"></span> !</h5>
@@ -76,33 +74,31 @@
               </div>
               <div style="display:flex; justify-content: center;">
                 <a class="Btn logOutButton"  >
-  
                     <div class="sign"><svg viewBox="0 0 512 512"><path d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"></path></svg></div>
-                    
                     <div class="textS">Logout</div>
                   </a>
-                  
             </div>
-              
                   </div>
                 </div>
               </div>
-
-</div>
-
+            </div>
                   <form action="/user/searchProduct/" method="get" class="searchForm" enctype="application/form-data">
                      <div class="d-flex align-items-center">
                         <% if (locals?.search) { %>
                             <% var value = search?search:''; %>
                             <div class="input-group">
                                 <input type="text" class="form-control" name="search" placeholder="Search Product" style="min-width: 100px;" id="searchInput">
-                                <button type="reset" class="btn border-dark-subtle" id="clearSearch" onclick="clearA()" style="background: white;">
-                                    <i class="bi bi-x-lg"></i></button></div>
+                                <button type="reset" class="btn border-dark-subtle" id="clearSearch" onclick="clearSearchInput()" style="background: white;">
+                                    <i class="bi bi-x-lg"></i>
+                                </button>
+                            </div>
                                     <% } else { %>
                             <div class="input-group">
-                            <input type="text" class="form-control border-dark" name="search" placeholder="Search Product" style="min-width: 100px;" id="searchInput">
-                            <button type="reset" class="btn border-dark-subtle" id="clearSearch" onclick="clearA()" style="background: white;">
-                                <i class="bi bi-x-lg"></i></button></div>
+                              <input type="text" class="form-control border-dark" name="search" placeholder="Search Product" style="min-width: 100px;" id="searchInput">
+                              <button type="reset" class="btn border-dark-subtle" id="clearSearch" onclick="clearSearchInput()" style="background: white;">
+                                  <i class="bi bi-x-lg"></i>
+                              </button>
+                            </div>
                         <% } %>
                         <button class="btn btn-dark text-center rounded" type="submit" style="width: 50px; margin-left: 10px;"><i class="fa-solid fa-magnifying-glass"></i></button>
                     </div>
@@ -110,111 +106,17 @@
                </div>
             </div>
          </nav>
-         
         </div>
     </div>
 </div>
-
 <div class="mt-2 chatDiv" title="Help Center" style="display:flex; justify-content: center; position: fixed; bottom: 10px; right: 10px; z-index: 1000000 !important;">
   <a  class="chatButton"  style="font-family: 'Michroma', sans-serif;">
     <span class="" style="height: 100%; width: 100%; display: grid; place-items: center; margin: 0px; padding: 3px 0px 0px 0px;"><i class="bi bi-chat-right-dots fs-4" id="biChat"></i></span>
   </a>
 </div>
 <script>
-  const  chatDiv=document.querySelector('.chatDiv')
-  const logOutButton=document.querySelectorAll('.logOutButton')
-  const currentUrl = window.location.href;
-  const url=currentUrl.split('/')
-  if(url[url.length-1]==='chat'){
-    chatDiv.style.display='none'
-  }
-
-    // Simulate content loading
-    document.addEventListener("DOMContentLoaded", function() {
-        document.querySelector(".loading-screen").style.display = "none";
-    });
-    document.addEventListener("DOMContentLoaded", function() {
-        const wishCount = document.querySelector(".wishlistCount");
-        const cartCount = document.querySelector(".cartCount");
-        const userName = document.querySelector(".userName");
-
-    // Wrap the fetch operation in a function
-            const fetchData = async () => {
-                try {
-                    const response = await fetch('/user/getCount');
-
-                    if (!response.ok) {
-                        throw new Error(`Network response was not ok: ${response.status}`);
-                    }
-
-                    const data = await response.json();
-
-                    // Update the UI with the fetched data
-                    wishCount.textContent = data.wishCount;
-                    cartCount.textContent = data.cartCount;
-                    userName.textContent = data.userName;
-                } catch (error) {
-                    console.error('Error during fetch operation:', error);
-                }
-            };
-
-            // Call the function
-            fetchData();
-    
-    });
-
-       document.addEventListener("DOMContentLoaded", function () {
-           const clearSearch = document.getElementById("searchInput");
-           
-           // Pre-fill search input if 'search' exists
-            clearSearch.value = '<%=value%>';
-    });
-
-    function clearA() {
-        const form = document.querySelector(".searchForm");
-        form.reset();
-        clearSearch.value = '';
-    }
-    logOutButton.forEach(Button => {
-      Button.addEventListener('click', (e) => {
-        e.preventDefault();
-        Swal.fire({
-          title: 'Are you sure?',
-          icon: 'info',
-          showCancelButton: true,
-          confirmButtonColor: '#D2122E',
-          cancelButtonColor: '#720e9e',
-          confirmButtonText: 'Log Out!'
-        }).then((result) => {
-          if (result.isConfirmed) {
-            window.location.href = '/user/logout/';
-          }
-        });
-      });
-    });
-
-    const chatButton = document.querySelector(".chatButton");
-    chatButton.addEventListener("click", (e) => {
-        e.preventDefault();
-        Swal.fire({
-            title: 'Proceed to Help Chat?',
-            text: "You are about to enter the help chat. Please use this service responsibly.",
-            icon: 'info',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Proceed',
-            cancelButtonText: 'Cancel'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                window.location.href = "/chatBot/chat";
-            }
-        });
-    });
-
-
+  const currentSearchValue='<%=value%>';
 </script>
-
 <script src="../../public/jsFiles/searchVal.js"></script>
-
+<script src="../../public/jsFiles/header.js"></script>
 <%- include('./footerHTML')-%>
