--- a/public/css/detailedProduct.css
+++ b/public/css/detailedProduct.css
@@ -2,5 +2,5 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis !important;
-    cursor: pointer;
+    margin-bottom: 0px;
 }
