--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,5 +1,7 @@
 <%- include('./headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/footer.css">
+<link rel="stylesheet" type="text/css" href="../../public/css/glowingButton.css">
+
 </head>
 <body>
     <footer class="footer-section" style="margin-top: 4rem;">
@@ -29,7 +31,7 @@
                             <i class="far fa-envelope-open"></i>
                             <div class="cta-text">
                                 <h4>Mail us</h4>
-                                <span>rarekicks0@gmail.com</span>
+                                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rarekicks0@gmail.com" target="_blank" style="text-decoration: none; color: #757575;">rarekicks0@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -40,16 +42,17 @@
                     <div class="col-xl-4 col-lg-4 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="/user/home"><img src="../../public/images/kn (1).png" class="img-fluid" alt="logo"></a>
+                                <a href="/user/home" class="glowingButton"></a>
                             </div>
                             <div class="footer-text">
                                 <p>Rare Kicks was born out of a shared love for sneakers and a desire to offer something special to fellow sneakerheads. We understand that your footwear isn't just an accessory; it's an expression of your personality and a statement of your style. That's why we've made it our mission to hunt down the rarest shoes.</p>
                             </div>
                             <div class="footer-social-icon">
                                 <span>Follow us</span>
-                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                                <a href="#"><i class="fa-brands fa-facebook fs-4"></i></a>
+                                <a href="#"><i class="fa-brands fa-x-twitter fs-4"></i></a>
+                                <a href="#"><i class="fa-brands fa-instagram fs-4"></i></a>
+                                <a href="#"><i class="fa-brands fa-google-plus-g fs-4"></i></a>
                             </div>
                         </div>
                     </div>
@@ -94,7 +97,7 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 text-center text-lg-left">
                         <div class="copyright-text">
-                            <p>Copyright &copy; 2018, All Right Reserved <a href="mailto:rarekicks0@gmail.com">rarekicks0@gmail.com</a></p>
+                            <p>Copyright &copy; 2018, All Right Reserved <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rarekicks0@gmail.com" target="_blank">rarekicks0@gmail.com</a></p>
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
