--- a/views/user/homePage.ejs
+++ b/views/user/homePage.ejs
@@ -1,7 +1,6 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/homePage.css">
 <link rel="stylesheet" type="text/css" href="../../public/css/card.css">
-
 </head>
 <body>
     <%- include('../layout/header')-%>
@@ -14,7 +13,7 @@
               <p>" Step into style with our latest arrivals! Explore our shoe store's freshest collection, featuring trendy designs, comfort, and quality that will keep you walking in confidence. Discover the perfect pair to elevate your every step ”</p>
             </div>
         </div>
-        <h3 class="text-center mb-2 mt-4" style="  font-family: 'Michroma', sans-serif;">New Arrivals</h3>
+        <h3 class="text-center mb-2 mt-4" style="  font-family: 'Michroma', sans-serif;">Best Sellers</h3>
         <div class="col-12 sideMain" style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-around;">
             <% products2?.forEach((product, index) => {
                 if (index < 2) {
