--- a/views/layout/headerHTML.ejs
+++ b/views/layout/headerHTML.ejs
@@ -19,4 +19,7 @@
         .mainFontFamily{
             font-family: 'Michroma', sans-serif !important;
         }
+        * ul{
+            list-style-type: none;
+        }
     </style>
