--- a/views/user/404.ejs
+++ b/views/user/404.ejs
@@ -1,57 +1,7 @@
 <%- include('../layout/headerHTML')-%>
-
+<link rel="stylesheet" href="../../public/css/404.css">
 </head>
 <body>
-    <style>
-        /*======================
-        404 page
-        =======================*/
-        *{
-            font-family: 'Michroma', sans-serif;
-           
-        }
-        .body{
-            height: 100vh;
-            display: flex;
-            align-items: center;
-        }
-        .page_404 {
-            height: 100vh;
-            padding: 40px 0;
-            background: #ffffff;
-            font-family: 'Arvo', serif;
-        }
-
-        .page_404 img {
-            width: 100%;
-        }
-
-        .four_zero_four_bg {
-            background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
-            height: 400px;
-            background-position: center;
-        }
-
-        .four_zero_four_bg h1 {
-            font-size: 80px;
-        }
-
-        .four_zero_four_bg h3 {
-            font-size: 80px;
-        }
-
-        .link_404 {
-            color: #fff!important;
-            padding: 10px 20px;
-            background: #39ac31;
-            margin: 20px 0;
-            display: inline-block;
-        }
-
-        .contant_box_404 {
-            margin-top: -50px;
-        }
-    </style>
 </head>
 <body>
     <div class="container-fluid">
@@ -61,18 +11,14 @@
                     <div class="col-sm-10 text-center">
                         <div class="four_zero_four_bg">
                             <h1 class="text-center ">404</h1>
-                            
                         </div>
-
                         <div class="contant_box_404">
                             <h3 class="h2">
                                 Look like you're lost
                             </h3>
-
                             <p>The page you are looking for is not available!</p>
                             <p class="text-center text-warning" style="word-wrap: break-word;"><%=url%> Not Found</p>
-
-                            <a href="/user/home/" class="btn btn-danger">Go to Home</a>
+                            <a href="/user/home" class="btn btn-danger">Go to Home</a>
                         </div>
                     </div>
                 </div>
