--- a/views/user/detailedProduct.ejs
+++ b/views/user/detailedProduct.ejs
@@ -77,11 +77,9 @@
                     <span>M.R.P : &#x20B9 <strike><%=product?.price%></strike></span>  
                   </div>
             <%}%>
-            
             <div class="px-2 " style="display: inline-block; margin-top: 6px; border: 1px solid rgb(215, 215, 215); border-radius: 30px; background-color: #ffffffc1; font-family: 'Michroma', sans-serif; padding-bottom: 5px;">
                 <% const rating = averageRating; %>
                 <span style="font-size: 10px;"><%=rating%> / 5</span>
-    
                 <a href="#reviewCont" style="text-decoration: none;">
                     <% for (let i = 0; i < 5; i++) { %>
                         <% if (i < rating) { %>
@@ -110,32 +108,26 @@
                             <span class="fs-4">Out Of Stock!! </span>
                         </p>
                     <% } %>
-                    
                 </div>
-                
                 <% if(product?.sizes.length>0 && product?.quantity>0){%>
                     <a href="" id="<%=product?._id%>" class="addToCart btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2" ><h3 style=" font-family: 'Michroma', sans-serif;">Add To Cart</h3></a>
 
                 <%} %>
-                <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;" ><span class="fs-4">Category : </span><%=product?.category?.name%></p>
                 <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;" ><span class="fs-4">Brand : </span><%=product?.brand%></p>
+                <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;" ><span class="fs-4">Category : </span><%=product?.category?.name%></p>
                 <h3 class="mt-3" style="font-family: 'Michroma', sans-serif; ">About Product : </h3>
-                <p class="descriptionCont" id="descriptionCont" style="font-family: 'Michroma', sans-serif; font-size: 16px;">
+                <p class="descriptionCont mainFontFamily" id="descriptionCont" style="font-size: 16px;">
                     <%=product?.description%>
                 </p>
+                <span id="showMore" class="mainFontFamily text-end d-block" style="cursor: pointer; text-decoration: underline;">show more.</span>
             </div>
-           
-            
         </div>
     </div>
     </div>
     <%- include('../layout/adText')-%>
-
 <div class="container" style="margin-top: 70px;">
     <h2 style="  font-family: 'Michroma', sans-serif;">You May Also Like </h2>
 </div>
-
-
 <div class="container productCont mt-3 mb-5">
         <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4 d-flex mt-2 ms-3 me-3 mb-4 " style="justify-content: center;">
 <%
@@ -154,7 +146,6 @@ products?.forEach(productA => {
             <h5 class="card-title text-center mb-2"><%= productA.name%></h5>
         <a href="/user/productDetailed?id=<%=productA._id%>" class="btn btn-dark mt-auto rounded-pill"><%if(productA?.discountPercentage&&productA?.discountPercentage>0){%>
             <span class="text-danger"> &#x20B9 <%= (productA.price-((productA?.price*productA?.discountPercentage)/100)).toFixed(0)%></span>
-           
         <%}else {%>
             &#x20B9 <%= productA?.price%>
         <%}%>
@@ -177,9 +168,9 @@ products?.forEach(productA => {
             <%product.reviews.forEach(review=>{%>
                 <div class="product-card">
                     <div class="product-info">
-                        <h5><i class="fa-regular fa-circle-user fs-1 me-2"></i> <%=review.userName.toUpperCase()%></h5>
+                        <h5><i class="bi bi-person-check me-2 fs-4 my-auto"></i> <%=review.userName.toUpperCase()%></h5>
                         <p><b>Posted On : </b><%=moment(review.postedOn).format('YYYY-MM-DD')%></p>
-                        <p style="margin-top: -10px;"><b>Review : <%=review.rating%>/5 </b><%=review.review%></p>
+                        <p class="productReview" style="margin-top: -10px;"><b>Review : <%=review.rating%>/5 </b><%=review.review%></p>
                     </div>
                     <div class="rating-container">
                         <% const rating = review.rating; %>
@@ -202,7 +193,7 @@ products?.forEach(productA => {
         </div>
 
     <!-- Button to Open Review Modal -->
-    <button type="button" class="bookmarkBtn ms-auto my-auto" data-toggle="modal" data-target="#reviewModal">
+    <button type="button" class="bookmarkBtn ms-auto my-auto me-2" data-toggle="modal" data-target="#reviewModal">
         <span class="IconContainer"> 
          <svg fill="white" viewBox="0 0 512 512" height="1em"><path d="M123.6 391.3c12.9-9.4 29.6-11.8 44.6-6.4c26.5 9.6 56.2 15.1 87.8 15.1c124.7 0 208-80.5 208-160s-83.3-160-208-160S48 160.5 48 240c0 32 12.4 62.8 35.7 89.2c8.6 9.7 12.8 22.5 11.8 35.5c-1.4 18.1-5.7 34.7-11.3 49.4c17-7.9 31.1-16.7 39.4-22.7zM21.2 431.9c1.8-2.7 3.5-5.4 5.1-8.1c10-16.6 19.5-38.4 21.4-62.9C17.7 326.8 0 285.1 0 240C0 125.1 114.6 32 256 32s256 93.1 256 208s-114.6 208-256 208c-37.1 0-72.3-6.4-104.1-17.9c-11.9 8.7-31.3 20.6-54.3 30.6c-15.1 6.6-32.3 12.6-50.1 16.1c-.8 .2-1.6 .3-2.4 .5c-4.4 .8-8.7 1.5-13.2 1.9c-.2 0-.5 .1-.7 .1c-5.1 .5-10.2 .8-15.3 .8c-6.5 0-12.3-3.9-14.8-9.9c-2.5-6-1.1-12.8 3.4-17.4c4.1-4.2 7.8-8.7 11.3-13.5c1.7-2.3 3.3-4.6 4.8-6.9c.1-.2 .2-.3 .3-.5z"></path></svg>
         </span>
@@ -248,8 +239,6 @@ products?.forEach(productA => {
     </div>
 </div>
 </div>
-
-
 <script src="../../public/jsFiles/productDetailed.js"></script>
 <script src="../../public/jsFiles/cart.js"></script>
 <%- include('../layout/footer')-%>
